# fastgreml

./: .gitignore  CMakeLists.txt  hpc-build.sh  hpc-cmake.sh  hpc-run.sh  run.sh
.cache/clangd/index/: fastgreml250530.cpp.0E9B11E366300EC5.idx
scripts/hpc/: hpc-build.sh  hpc-cmake.sh  hpc-run.sh  hpc-slurm-run.sh
scripts/local/: cmake.sh  run.sh
src/: fastgreml.cpp  fastgreml250514.cpp  fastgreml250530.cpp  utils.cpp  utils.hpp
